# glmus

glmus/: CMakeLists.txt  main.cpp
glmus/core/: baraja.cpp  baraja.cpp~  baraja.h  baraja.h~  carta.cpp  carta.cpp~  carta.h  carta.h~  equipo.cpp  equipo.h  juego.cpp  juego.h  jugada.cpp~  jugador.cpp  jugador.cpp~  jugador.h  jugador.h~  mano.cpp~  mano.h~  mem.cpp  mem.cpp~  mem.h  mem.h~  partida.cpp  partida.h  setequipos.cpp  setequipos.h  setjugadores.cpp  setjugadores.cpp~  setjugadores.h  setjugadores.h~  sleeper.cpp  sleeper.h  vaca.cpp  vaca.h
glmus/i18n/: glmus_en.ts
glmus/images/: glmus.qrc
glmus/ui/: frmMain.cpp  frmMain.cpp~  frmMain.h  frmMain.h~  frmMain.ui  wdgGame.cpp  wdgGame.cpp~  wdgGame.h  wdgGame.h~  wdgGame.ui
